; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_notes.c_parse_reedit_arg.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_notes.c_parse_reedit_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { %struct.note_data* }
%struct.note_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @parse_reedit_arg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_reedit_arg(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.option*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.note_data*, align 8
  store %struct.option* %0, %struct.option** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.option*, %struct.option** %4, align 8
  %9 = getelementptr inbounds %struct.option, %struct.option* %8, i32 0, i32 0
  %10 = load %struct.note_data*, %struct.note_data** %9, align 8
  store %struct.note_data* %10, %struct.note_data** %7, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @BUG_ON_OPT_NEG(i32 %11)
  %13 = load %struct.note_data*, %struct.note_data** %7, align 8
  %14 = getelementptr inbounds %struct.note_data, %struct.note_data* %13, i32 0, i32 0
  store i32 1, i32* %14, align 4
  %15 = load %struct.option*, %struct.option** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @parse_reuse_arg(%struct.option* %15, i8* %16, i32 %17)
  ret i32 %18
}

declare dso_local i32 @BUG_ON_OPT_NEG(i32) #1

declare dso_local i32 @parse_reuse_arg(%struct.option*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
